<resources>
    <string name="app_name">Local Mark</string>
    <string name="action_settings">Settings</string>
    <string name="action_create">Create</string>
    <string name="action_manage">Management</string>
    <string name="action_sdcard">sdcard</string>
    <string name="action_print">Print Document</string>
    <string name="action_save">Save</string>
    <string name="action_detail">Detail</string>
    <string name="title_activity_select_position_lat_lng_kmlfile">Back</string>
    <string name="title_activity_insert_basic_data_from_user">Back</string>
    <string name="title_activity_management_file_data">Local Database</string>
    <string name="title_activity_management_detail">Back</string>
    <string name="lbl_lng">LNG</string>
    <string name="lbl_lat">LAT</string>
    <string name="title_activity_print_dialog">Google Cloud Print Document</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_insert_head">รายละเอียด</string>
    <string name="txt_insert_name">ชื่อ-นามสกุล</string>
    <string name="txt_insert_id">เลขที่ประจำตัวประชาชน</string>
    <string name="txt_insert_add">ที่อยู่</string>
    <string name="txt_insert_area">จำนวนพื้นที่</string>
    <string name="login_">ล็อคอิน</string>
    <string name="txt_edit_">แก้ไขข้อมูล</string>
    <string name="remember">Remember me</string>
    <string name="log">เข้าสู่ระบบ</string>
    <string name="data">ข้อมูล</string>
    <string name="choose">เลือกโฟลเดอร์</string>
</resources>
