<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.6"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_overflow" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_insert_head"
            android:textColor="#176CEC"
            android:textSize="26dp"
            android:textStyle="italic"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical">

        <TextView
            android:id="@+id/str_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1.1"
            android:text="@string/txt_insert_name"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1.1"
            android:text="@string/txt_insert_id"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/str_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1.1"
            android:text="@string/txt_insert_add"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="2.5dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="2.2"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/str_add"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="4"
                        android:text="@string/txt_insert_area"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/editTextWidthArea"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="3"
                        android:background="@drawable/edittext_rounded_corners"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>