<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#F0F0F0"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/login_"
            android:textColor="#176CEC"
            android:textSize="26sp"
            android:textStyle="italic"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.1"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_weight="1.2"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:gravity="center"
            android:hint="username"
            android:padding="12dp"
            android:textSize="18dp"
            android:textStyle="italic"
            android:typeface="sans">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_weight="1.2"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:gravity="center"
            android:hint="password"
            android:padding="12dp"
            android:password="true"
            android:textSize="18dp"
            android:textStyle="italic"
            android:typeface="sans" />

        <CheckBox
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1.17"
            android:text="@string/remember"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1.2"
            android:background="@drawable/custom_btn_beige"
            android:text="@string/log"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.1"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>